[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/levels/terrain.gd" type="Script" id=1]
[ext_resource path="res://scenes/prefabs/canvas_layer.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/prefabs/camera.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/prefabs/lander.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/prefabs/arrival_point.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/levels/level.gd" type="Script" id=6]

[node name="level_1" type="Node2D"]
script = ExtResource( 6 )

[node name="canvas_layer" parent="." instance=ExtResource( 2 )]

[node name="camera" parent="." instance=ExtResource( 3 )]
position = Vector2( 30, 205 )

[node name="top_left" parent="camera/limits" index="0"]
position = Vector2( -582, -236 )

[node name="bottom_right" parent="camera/limits" index="1"]
position = Vector2( 446, 229 )

[node name="lander" parent="." instance=ExtResource( 4 )]
position = Vector2( 30, 205 )

[node name="rem_transf" type="RemoteTransform2D" parent="lander"]
remote_path = NodePath("../../camera")

[node name="terrain" type="StaticBody2D" parent="."]
script = ExtResource( 1 )

[node name="collision" type="CollisionPolygon2D" parent="terrain"]

[node name="poly" type="Polygon2D" parent="terrain"]
color = Color( 0.431373, 0.431373, 0.431373, 1 )
polygon = PoolVector2Array( -330, 113, -186, 202, 63, 219, 300, 137, 417, -64, 576, -93, 782, -7, 719, 352, -411, 473, -617, -31 )

[node name="arrival_point" parent="." instance=ExtResource( 5 )]
position = Vector2( -62, 211 )
[connection signal="moving" from="lander" to="." method="_on_lander_moving"]
[connection signal="stopped" from="lander" to="." method="_on_lander_stopped"]
[connection signal="body_entered" from="arrival_point" to="." method="_on_arrival_point_body_entered"]
[connection signal="body_exited" from="arrival_point" to="." method="_on_arrival_point_body_exited"]

[editable path="camera"]
